--- a/src/example-orderexport/composer.json
+++ b/src/example-orderexport/composer.json
@@ -4,6 +4,7 @@
     "type": "magento2-module",
     "require": {
         "magento/framework": "^103",
+        "guzzlehttp/guzzle": "^7.4",
         "magento/module-checkout": "^100",
         "magento/module-cms": "^104",
         "swiftotter/module-fulfillment-block": "*"
