--- a/src/example-orderexport/composer.json
+++ b/src/example-orderexport/composer.json
@@ -3,7 +3,8 @@
     "description": "",
     "type": "magento2-module",
     "require": {
-        "magento/framework": "^103"
+        "magento/framework": "^103",
+        "magento/module-sales":  "^103"
     },
     "autoload": {
         "files": [
