--- a/src/example-orderexport/composer.json
+++ b/src/example-orderexport/composer.json
@@ -4,6 +4,7 @@
     "type": "magento2-module",
     "require": {
         "magento/framework": "^103",
+        "magento/module-eav": "^102",
         "magento/module-sales":  "^103"
     },
     "autoload": {
