--- a/src/example-orderexport/composer.json
+++ b/src/example-orderexport/composer.json
@@ -5,6 +5,7 @@
     "require": {
         "magento/framework": "^103",
         "magento/module-eav": "^102",
+        "magento/module-catalog": "^104",
         "magento/module-sales":  "^103"
     },
     "autoload": {
