--- a/src/example-orderexport/composer.json
+++ b/src/example-orderexport/composer.json
@@ -6,7 +6,8 @@
         "magento/framework": "^103",
         "magento/module-eav": "^102",
         "magento/module-catalog": "^104",
-        "magento/module-sales":  "^103"
+        "magento/module-sales":  "^103",
+        "guzzlehttp/guzzle": "^7.4"
     },
     "autoload": {
         "files": [
