--- a/src/example-orderexport/composer.json
+++ b/src/example-orderexport/composer.json
@@ -6,7 +6,9 @@
         "magento/framework": "^103",
         "magento/module-eav": "^102",
         "magento/module-catalog": "^104",
+        "magento/module-cms": "^104",
         "magento/module-sales":  "^103",
+        "magento/module-checkout": "^100",
         "guzzlehttp/guzzle": "^7.4",
         "swiftotter/module-fulfillment-block": "*"
     },
